@@ -43,6 +43,7 @@
         <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
         <maven-surefire-plugin.version>2.16</maven-surefire-plugin.version>
         <maven-failsafe-plugin.version>2.16</maven-failsafe-plugin.version>
+        <maven-deploy-plugin.version>2.7</maven-deploy-plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -66,6 +67,96 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-aop</artifactId>
                 <version>${spring.version}</version>
+            </dependency>
+
+            <!--************************************-->
+            <!-- REDIS CLIENTS DEPENDENCIES         -->
+            <!--************************************-->
+
+            <dependency>
+                <groupId>redis.clients</groupId>
+                <artifactId>jedis</artifactId>
+                <version>${jedis.version}</version>
+            </dependency>
+
+            <!--************************************-->
+            <!-- ASPECTJ DEPENDENCIES               -->
+            <!--************************************-->
+
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjrt</artifactId>
+                <version>${aspectj.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjweaver</artifactId>
+                <version>${aspectj.version}</version>
+            </dependency>
+
+            <!--************************************-->
+            <!-- SERIALIZER DEPENDENCIES            -->
+            <!--************************************-->
+
+            <dependency>
+                <groupId>org.codehaus.jackson</groupId>
+                <artifactId>jackson-mapper-asl</artifactId>
+                <version>1.9.13</version>
+            </dependency>
+            <dependency>
+                <groupId>de.ruedigermoeller</groupId>
+                <artifactId>fst</artifactId>
+                <version>1.40</version>
+            </dependency>
+
+            <!--************************************-->
+            <!-- COMPRESSION DEPENDENCIES           -->
+            <!--************************************-->
+
+            <dependency>
+                <groupId>net.jpountz.lz4</groupId>
+                <artifactId>lz4</artifactId>
+                <version>1.2.0</version>
+            </dependency>
+
+            <!--************************************-->
+            <!-- MISC EPENDENCIES                   -->
+            <!--************************************-->
+
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>15.0</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-collections</groupId>
+                <artifactId>commons-collections</artifactId>
+                <version>3.2.1</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>2.4</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.code.findbugs</groupId>
+                <artifactId>jsr305</artifactId>
+                <version>2.0.2</version>
+            </dependency>
+            <dependency>
+                <groupId>org.reflections</groupId>
+                <artifactId>reflections</artifactId>
+                <version>0.9.5</version>
+            </dependency>
+            <dependency>
+                <groupId>cglib</groupId>
+                <artifactId>cglib</artifactId>
+                <version>3.1</version>
+            </dependency>
+            <dependency>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+                <version>1.2.17</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -150,6 +241,20 @@
                         <artifactId>maven-failsafe-plugin</artifactId>
                         <version>${maven-failsafe-plugin.version}</version>
                         <configuration>
+                            <argLine>-server -Xms512m -Xmx2048m
+                                -XX:+UseConcMarkSweepGC
+                                -XX:+CMSClassUnloadingEnabled
+                            </argLine>
+                            <systemProperties>
+                                <property>
+                                    <name>jub.consumers</name>
+                                    <value>CONSOLE,H2</value>
+                                </property>
+                                <property>
+                                    <name>jub.db.file</name>
+                                    <value>.benchmarks</value>
+                                </property>
+                            </systemProperties>
                             <includes>
                                 <include>**/*IntegrationTest.java</include>
                                 <include>**/*PerformanceTest.java</include>
